--- a/Move it/index.html
+++ b/Move it/index.html
@@ -259,4 +259,4 @@
   </body>
 </html>
 
-<!--like svg with its code, or img and then source of downloaded in our folder -->
+<!--insert svg with its code, or img and then source of downloaded icon or picture in our folder -->
