--- a/TinDog/index.html
+++ b/TinDog/index.html
@@ -118,7 +118,7 @@
               </svg>
             </div>
             <div>
-              <h3 class="fs-2 text-body-emphasis">Elite Clientele.</h3>
+              <h3 class="fs-2 text-body-emphasis">Elite Clientele</h3>
               <p>We have all the dogs, the greatest dogs.</p>
             </div>
           </div>
@@ -140,7 +140,7 @@
               </svg>
             </div>
             <div>
-              <h3 class="fs-2 text-body-emphasis">Guaranteed to work.</h3>
+              <h3 class="fs-2 text-body-emphasis">Guaranteed to work</h3>
               <p>Find the love of your dog's life or your money back.</p>
             </div>
           </div>
